[tool.poetry]
name = "dsing"
version = "0.1.0"
description = "EDA for dataset."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
jupyterlab = "^4.1.4"
torch = "^2.2.1"
torchaudio = "^2.2.1"
librosa = "^0.10.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
